--- a/AppForVK/pas/description.in
+++ b/AppForVK/pas/description.in
@@ -1,3 +1,2 @@
-Hello, 
-It's my 
-First program
+При помощи данной программы можно сгенерировать большое количество файлов на ПК.
+Количество файлов и их размер можно изменять в коде программы.
