--- a/AppForVK/pas/description.in
+++ b/AppForVK/pas/description.in
@@ -1,2 +1,2 @@
-При помощи данной программы можно сгенерировать большое количество файлов на ПК.
-Количество файлов и их размер можно изменять в коде программы.
+Если вы будете нажимать на это дерьмо, оно выведет вам к-ство ....
+$$$$$$ (Dollars)
